--- a/settings.json
+++ b/settings.json
@@ -224,7 +224,104 @@
             "showDefault": false
         },
         "dice": {},
-        "regex": [],
+        "regex": [
+            {
+                "scriptName": "HiddenCamera.L",
+                "findRegex": "<HiddenCamera>",
+                "replaceString": "<HiddenCamera><details>",
+                "trimStrings": [],
+                "placement": [
+                    2
+                ],
+                "disabled": false,
+                "markdownOnly": true,
+                "promptOnly": false,
+                "runOnEdit": true,
+                "substituteRegex": false,
+                "minDepth": null,
+                "maxDepth": null
+            },
+            {
+                "scriptName": "HiddenCamera.R",
+                "findRegex": "</HiddenCamera>",
+                "replaceString": "</details></HiddenCamera>",
+                "trimStrings": [],
+                "placement": [
+                    2
+                ],
+                "disabled": false,
+                "markdownOnly": true,
+                "promptOnly": false,
+                "runOnEdit": true,
+                "substituteRegex": false,
+                "minDepth": null,
+                "maxDepth": null
+            },
+            {
+                "scriptName": "status.L",
+                "findRegex": "<status>",
+                "replaceString": "<status><details>",
+                "trimStrings": [],
+                "placement": [
+                    2
+                ],
+                "disabled": false,
+                "markdownOnly": true,
+                "promptOnly": false,
+                "runOnEdit": true,
+                "substituteRegex": false,
+                "minDepth": null,
+                "maxDepth": null
+            },
+            {
+                "scriptName": "status.R",
+                "findRegex": "</status>",
+                "replaceString": "</details></status>",
+                "trimStrings": [],
+                "placement": [
+                    2
+                ],
+                "disabled": false,
+                "markdownOnly": true,
+                "promptOnly": false,
+                "runOnEdit": true,
+                "substituteRegex": false,
+                "minDepth": null,
+                "maxDepth": null
+            },
+            {
+                "scriptName": "img.L",
+                "findRegex": "/<(illustration|img)>.*[^0-9A-Za-z.\\s</>]+/gm",
+                "replaceString": "<center><img src=https://files.catbox.moe/",
+                "trimStrings": [],
+                "placement": [
+                    2
+                ],
+                "disabled": false,
+                "markdownOnly": true,
+                "promptOnly": false,
+                "runOnEdit": true,
+                "substituteRegex": false,
+                "minDepth": null,
+                "maxDepth": null
+            },
+            {
+                "scriptName": "img.R",
+                "findRegex": "/</(illustration|img)>/g",
+                "replaceString": "? width=50% /></center>",
+                "trimStrings": [],
+                "placement": [
+                    2
+                ],
+                "disabled": false,
+                "markdownOnly": true,
+                "promptOnly": false,
+                "runOnEdit": true,
+                "substituteRegex": false,
+                "minDepth": null,
+                "maxDepth": null
+            }
+        ],
         "tts": {
             "voiceMap": "",
             "ttsEnabled": false,
@@ -602,7 +699,7 @@
         "google_model": "gemini-pro",
         "chat_completion_source": "makersuite",
         "wi_format": "[Details of the fictional world the RP is set in:\n{0}]\n",
-        "openai_model": "gpt-3.5-turbo",
+        "openai_model": "claude-2",
         "claude_model": "claude-instant-v1",
         "ai21_model": "j2-ultra",
         "windowai_model": "",
