--- a/config.yaml
+++ b/config.yaml
@@ -9,11 +9,11 @@ whitelistMode: false
 whitelist:
   - 127.0.0.1
 # Toggle basic authentication for endpoints
-basicAuthMode: ture
+basicAuthMode: true
 # Basic authentication credentials
 basicAuthUser:
-  username: username
-  password: password
+  username: "user"
+  password: "password"
 # Enables CORS proxy middleware
 enableCorsProxy: false
 # Disable security checks - NOT RECOMMENDED
